# srt

./: .gitignore  Makefile  Makefile.llvm  README  aabb.h  build.sh  camera.h  cbind.cpp  cbind.h  copy.c  copy.h  deriv.c  deriv.h  edit.c  edit.h  error.c  error.h  eval.c  eval.h  gcc.c  heart.c  ia.h  jit.c  jit.h  matrix.h  parser.c  parser.h  ray.h  reduce.c  reduce.h  scalar.h  sphere.h  srt.c  stripe_data.h  todo.sh  utils.h  value.c  vector.h  voxel.h
curves/: cone.h  cross.h  cylinder.h  heart.h  mnm.h  paraboloid.h  plane.h  sphere.h  torus.h
src/: CMakeLists.txt  cmake_uninstall.cmake.in
src/examples/: CMakeLists.txt  minimalExampleCLI.cpp  minimalExampleGUI.cpp
src/libqsrt/: CMakeLists.txt  Doxyfile.in  TODO.txt  qsrt.h  qsrt_memtest.cpp  qsrt_tests.cpp  srtCamera.cpp  srtCamera.h  srtCamera_test.h  srtScene.cpp  srtScene.h  srtSceneWidget.cpp  srtSceneWidget.h  srtSurface.cpp  srtSurface.h  srtSurface_test.cpp  srtSurface_test.h  srt_test.cpp  srt_test.h  tests.cpp
src/libqsrt/QtDesignerPlugin/: CMakeLists.txt  srtSceneWidgetPlugin.cpp  srtSceneWidgetPlugin.h  srtSceneWidgetPlugin.qrc
src/libqsrt/documentation/: CMakeLists.txt  Doxyfile.in  dummy.cpp  srt-qt.h
src/libqsrt/examples/: CMakeLists.txt
src/libqsrt/srt-designerplugin/: CMakeLists.txt
src/libqsrt/srt-designerplugin/qt4/: CMakeLists.txt
src/libqsrt/srt-qtcore/: CMakeLists.txt  srtCamera.h  srtScene.cpp  srtScene.h  srtSurface.cpp  srtSurface.h
src/libqsrt/srt-qtcore/qt4/: CMakeLists.txt
src/libqsrt/srt-qtcore/qt5/: CMakeLists.txt
src/libqsrt/srt-qtwidgets/: CMakeLists.txt  srtSceneWidget.cpp  srtSceneWidget.h
src/libqsrt/srt-qtwidgets/qt4/: CMakeLists.txt
src/libqsrt/tests/: CMakeLists.txt  qsrt_memtest.cpp  srtCamera_test.cpp
src/libsrt/: CMakeLists.txt  camera.h  cbind.cpp  copy.c  copy.cpp  copy.h  deriv.cpp  deriv.h  error.c  error.cpp  error.h  eval.cpp  eval.h  ia.h  jit.c  jit.cpp  jit.h  matrix.h  parser.c  parser.cpp  parser.h  reduce.cpp  reduce.h  scalar.h  sphere.h  srtConfig.cmake  stripe_data.h  value.c
src/srtQt/: CMakeLists.txt
src/srtQt/designerplugin/: CMakeLists.txt  SceneWidgetPlugin.cpp  SceneWidgetPlugin.h
src/srtQt/designerplugin/qt4/: CMakeLists.txt
src/srtQt/designerplugin/qt5/: CMakeLists.txt
src/srtQt/documentation/: CMakeLists.txt  Doxyfile.in  dummy.cpp  logo.ssc  logoMaker.cpp  srt-qt.h  srtQt.h
src/srtQt/documentation/examples/example-srtQt4-cmake/: CMakeLists.txt
src/srtQt/documentation/examples/example-srtQt4-qmake/: minimalExampleGUI.pro
src/srtQt/documentation/examples/example-srtQt5-cmake/: CMakeLists.txt
src/srtQt/examples/: CMakeLists.txt  minimalExampleCLI.cpp  minimalExampleGUI.cpp
src/srtQt/srtQt/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneWidget.cpp  SceneWidget.h  Surface.cpp  Surface.h
src/srtQt/srtQt/private/: CoordinateWidget.cpp  CoordinateWidget.h
src/srtQt/srtQt/qt4/: CMakeLists.txt  srtQt4Config.cmake
src/srtQt/srtQt/qt5/: CMakeLists.txt  srtQt5Config.cmake
src/srtQt/tests/: CMakeLists.txt  qsrt_memtest.cpp  qsrt_tests.cpp  srtCamera_test.cpp  srtQtMemtest.cpp  srtQtTests.cpp  srtSurface_test.cpp  srtSurface_test.h  srt_test.cpp  test_Camera.cpp  test_Surface.cpp  test_srt.cpp
src/srtTestQt/: CMakeLists.txt  edit.cpp  exportDialog.cpp  exportDialog.h  exportDialog.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  srtScene.h  srtTestQt.qrc  srtWidget.cpp  srtWidget.h
src/srtTestSDL/: CMakeLists.txt  ascii.h  edit.c  edit.cpp  edit.h  ppm.c  ppm.cpp  ppm.h  srt.c  srt.cpp  tests.h  utils.h
unused/: Makefile  Makefile.llvm
