#
# Find Qt4
#
FIND_PACKAGE(Qt4 4.8.0 REQUIRED)


#
# libsrt-qt4core
#
ADD_LIBRARY(srt-qt4core
  SHARED
  ${srt-qtcore_SOURCES}
  )
QT4_USE_MODULES(srt-qt4core Core Gui)
TARGET_LINK_LIBRARIES(srt-qt4core srt)
SET_TARGET_PROPERTIES(srt-qt4core PROPERTIES AUTOMOC TRUE)
SET_TARGET_PROPERTIES(srt-qt4core PROPERTIES VERSION ${srt-qt_VERSION_STRING} SOVERSION ${srt-qt_VERSION_MAJOR})
INSTALL(TARGETS srt-qt4core DESTINATION lib)
INSTALL(FILES ${srt-qtcore_HEADERS} DESTINATION include/srt-qt4)
