# Find Qt4
FIND_PACKAGE(Qt4 4.8.0 REQUIRED)


#
# libsrt-qt4widgets
#
ADD_LIBRARY(srt-qt4widgets
  SHARED
  ${srt-qtwidgets_SOURCES}
)
QT4_USE_MODULES(srt-qt4widgets Core Gui)
TARGET_LINK_LIBRARIES(srt-qt4widgets srt)
SET_TARGET_PROPERTIES(srt-qt4widgets PROPERTIES AUTOMOC TRUE)
SET_TARGET_PROPERTIES(srt-qt4widgets PROPERTIES VERSION ${srt-qt_VERSION_STRING} SOVERSION ${srt-qt_VERSION_MAJOR})
INSTALL(TARGETS srt-qt4widgets DESTINATION lib)
INSTALL(FILES ${srt-qtwidgets_HEADERS} DESTINATION include/srt-qt4)
